--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -3,57 +3,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="135dp"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
+            app:collapsedTitleTextAppearance="@style/toolbar_title"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginBottom="52dp"
             app:expandedTitleMarginEnd="0dp"
             app:expandedTitleMarginStart="20dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:collapsedTitleTextAppearance="@style/toolbar_title"
-            app:expandedTitleTextAppearance="@style/toolbar_title">
+            app:expandedTitleTextAppearance="@style/toolbar_title"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="20dp"
-                app:layout_collapseMode="pin"
-                android:layout_gravity="bottom"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:layout_collapseMode="pin">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="13sp"
+                    android:text="sub desc 1"
                     android:textColor="#444444"
-                    android:text="sub desc 1"/>
+                    android:textSize="13sp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="13sp"
+                    android:text="sub desc 2"
                     android:textColor="#444444"
-                    android:text="sub desc 2"/>
+                    android:textSize="13sp" />
 
             </LinearLayout>
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/anim_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
                 app:contentInsetStartWithNavigation="0dp"
+                app:layout_collapseMode="pin"
                 app:title="약관동의" />
+
         </android.support.design.widget.CollapsingToolbarLayout>
+
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
@@ -67,9 +72,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:lineSpacingExtra="8dp"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
     </android.support.v4.widget.NestedScrollView>
-
 
 </android.support.design.widget.CoordinatorLayout>
